--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,12 @@ nav ul, footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
+    text-align: center;
 }
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
+    text-align: center;
 }
 a {
     text-decoration: none;
@@ -21,7 +23,8 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Arial Black', 'Gadget', 'Sans-Serif';
+    text-align: center;
 }
 p {
     font-size: 1.5em;
