--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hjackson@mit.edu">email</a></li>
+	        		<li><a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a></li>
 				</ul>
 			</footer>
 		</body>
