--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,26 @@ body {
     margin: 60px auto;
     width: 70%;
 }
-nav ul, footer ul {
+nav ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style: none;
+    font-weight: bold;
+    text-align: right;
+}
+footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
     text-align: center;
 }
-nav ul li, footer ul li {
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+    text-align: right;
+}
+footer ul li {
     display: inline;
     margin-right: 20px;
     text-align: center;
