cosmic phylogeny page format

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,6 +5,11 @@ layout: default
 
 <div class="project">
     <div class="row">
-        {{ content }}
+        <div class="column">
+            <h1>Summary.</h1>>
+        </div>
+        <div class="column">
+            <p>{{content}}</p>
+        </div>
     </div>
 </div>
