--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,13 +2,9 @@
 layout: default
 ---
 
-<!-- <article class="page">-->
 <div class="blurb">
 
   <h1>{{ page.title }}</h1>
 
-  <div class="entry">
-    {{ content }}
-  </div>
+  <p>{{ content }}</p>
 </div>
-<!-- </article>-->
