--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,12 @@ nav ul {
     padding: 0px;
     list-style: none;
     text-align: right;
+    color: 
 }
 footer ul {
     font-family: 'Roboto', sans-serif;
     padding: 0px;
     list-style: none;
-    font-weight: bold;
     text-align: center;
 }
 nav ul li {
@@ -27,7 +27,7 @@ footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
+    color: #000;
 }
 a:hover {
     text-decoration: underline;
@@ -41,10 +41,9 @@ p {
     font-size: 1.5em;
     font-family: 'Roboto', sans-serif;
     line-height: 1.4em;
-    color: #333;
 }
 footer {
-    border-top: 0px solid #d5d5d5;
+    border-top: 0px;
     font-size: .8em;
     text-align: center;
 }
