--- a/css/main.css
+++ b/css/main.css
@@ -74,9 +74,12 @@ footer {
     }
 }
 
-img {
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 75%;
-}
+  }
 
 ul.posts { 
     margin: 20px auto 40px; 
