--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ p {
     font-size: 1.5em;
     font-family: 'Roboto', sans-serif;
     line-height: 1.4em;
+    text-align: center;
 }
 footer {
     border-top: 0px;
