--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,7 @@
 			
 			</div><!-- /.container -->
 			<footer>
-	    		<ul>
-	        		<li><a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a></li>
-				</ul>
+	    		<a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
 			</footer>
 		</body>
 	</html>
