--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ p {
     text-align: center;
 }
 footer {
+    font-family: 'Roboto', sans-serif;
     border-top: 0px;
     font-size: .8em;
     text-align: center;
