--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ nav ul li {
 a {
     text-decoration: none;
     color: #000;
+    text-decoration: underline;
 }
 a:hover {
     text-decoration: underline;
