editted cosmic phylogeny layout:

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ a {
     text-decoration: underline;
 }
 a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 h1 {
     font-size: 3em;
@@ -55,7 +55,6 @@ footer {
     float: left;
     width: 50%;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
