--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 			<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
 		</head>
 		<body>
+			<a class="header__title" href="hollyjackson.github.io">Holly Jackson</a>
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Major Projects</a></li>
