--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,16 @@
 			<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
 		</head>
 		<body>
-			<a class="header__title" href="hollyjackson.github.io">Holly Jackson</a>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Major Projects</a></li>
-		        	<li><a href="/minor-projects">Minor Projects</a></li>
-	        		<li><a href="/about">About</a></li>
-	    		</ul>
-			</nav>
+			<header class="header">
+				<a class="header__title" href="hollyjackson.github.io">Holly Jackson</a>
+				<nav>
+					<ul>
+						<li><a href="/">Major Projects</a></li>
+						<li><a href="/minor-projects">Minor Projects</a></li>
+						<li><a href="/about">About</a></li>
+					</ul>
+				</nav>
+			</header>
 			<div class="container">
 			
 			{{ content }}
