--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,10 @@
 		</head>
 		<body>
 			<header class="header">
-				<a class="header__title" href="hollyjackson.github.io">Holly Jackson</a>
+				<a class="header__title" href="/">Holly Jackson</a>
 				<nav>
 					<ul>
-						<li><a href="/">Major Projects</a></li>
+						<li><a href="/" class="active">Major Projects</a></li>
 						<li><a href="/minor-projects">Minor Projects</a></li>
 						<li><a href="/about">About</a></li>
 					</ul>
