--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,9 @@ nav ul li {
 }
 a {
     color: #000;
+    text-decoration: none;
+}
+.active {
     text-decoration: underline;
 }
 .header__title {
