--- a/css/main.css
+++ b/css/main.css
@@ -33,10 +33,9 @@ a {
 }
 .header__title {
     padding: 0px;
-    display: inline;
     margin-left: 20px;
-    font-size: 3em;
-    font-family: 'Poppins', sans-serif;
+    font-size: 1.25em;
+    font-family: 'Roboto', sans-serif;
     text-align: left;
 }
 a:hover {
