--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+			<meta itemprop="image" content="http://barber.samesies.io/assets/images/icon.jpg">
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
