--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<meta name="viewport" content="width=device-width, initial-scale=1">
-			<meta itemprop="image" content="http://barber.samesies.io/assets/images/icon.jpg">
+			<link rel="icon" href="http://hollyjackson.github.io/images/icon.png">
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 			<header class="header">
 				<a class="header__title" href="/">Holly Jackson</a>
 				<nav>
-					<ul>
+					<ul class="header_list">
 						<li><a href="/" class="active">Major Projects</a></li>
 						<li><a href="/minor-projects">Minor Projects</a></li>
 						<li><a href="/about">About</a></li>
