--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,7 @@
 			</header>-->
 			<nav class="site-nav js-site-nav">
 				<div class="site-nav__width">
-					<a class="site-nav__logo-link" href="/">
-						<h1>Holly Jackson</h1>
-					</a>
+					<a class="site-nav__logo-link" href="/">Holly Jackson</a>
 					<ul class="site-nav__links">
 								<li class="site-nav__link-item menu-item--collapsed">
 							<a href="/" class="site-nav__link js-nav-item menu-item--collapsed" data-drupal-link-system-path="node/11">Major Projects</a>
