--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,20 +22,14 @@
 					</ul>
 				</nav>
 			</header>-->
-			<nav class="site-nav js-site-nav">
-				<div class="site-nav__width">
-					<a class="site-nav__logo-link" href="/">Holly Jackson</a>
-					<ul class="site-nav__links">
-								<li class="site-nav__link-item menu-item--collapsed">
-							<a href="/" class="site-nav__link js-nav-item menu-item--collapsed" data-drupal-link-system-path="node/11">Major Projects</a>
-						</li>
-						<li class="site-nav__link-item menu-item--collapsed">
-							<a href="/minor-projects" class="site-nav__link js-nav-item menu-item--collapsed" data-drupal-link-system-path="node/12">Minor Projects</a>
-						</li>
-						<li class="site-nav__link-item">
-							<a href="/about" class="site-nav__link js-nav-item" data-drupal-link-system-path="node/13">About</a>
-						</li>
-						</ul>
+			<nav>
+				<div class="site-nav">
+					<a href="/">Holly Jackson</a>
+					<ul>
+						<li><a href="/">Major Projects</a></li>
+						<li><a href="/minor-projects">Minor Projects</a></li>
+						<li><a href="/about">About</a></li>
+					</ul>
 				</div>
 			</nav>
 			<div class="container">
