changed about page

--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ nav ul li a.active {
     text-decoration: underline;
 }
 
+.static_link {
+    text-decoration: underline;
+}
+
 .hover {
     text-decoration: underline;
 }
