--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,55 @@ title {
     text-align: left;
 }
 
-nav ul {
+.header {
+    overflow: hidden;
+    padding: 20px 10px;
+}
+
+.header a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px; 
+    line-height: 25px;
+    border-radius: 4px;
+}
+
+.header a.logo {
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.header a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.header a.active {
+    background-color: dodgerblue;
+    color: white;
+}
+
+.header-right {
+    float: right;
+}
+
+@media screen and (max-width: 500px) {
+.header a {
+    float: none;
+    display: block;
+    text-align: left;
+}
+
+.header-right {
+    float: none;
+}
+}
+  
+
+/* nav ul {
     font-family: 'Roboto', sans-serif;
     padding: 0px;
     list-style: none;
@@ -39,6 +87,11 @@ nav ul li a.active {
 
 .hover {
     text-decoration: underline;
+}*/
+
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
