--- a/css/main.css
+++ b/css/main.css
@@ -1,143 +1,197 @@
-body {
-    margin: 60px auto;
-    width: 70%;
-}
-
-title {
-    font-size: 3em;
-    font-family: 'Poppins', sans-serif;
-    text-align: left;
-}
-
+/* Style the header with a grey background and some padding */
 .header {
-    overflow: hidden;
-    padding: 20px 10px;
+overflow: hidden;
+background-color: #f1f1f1;
+padding: 20px 10px;
 }
 
+/* Style the header links */
 .header a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px; 
-    line-height: 25px;
-    border-radius: 4px;
+float: left;
+color: black;
+text-align: center;
+padding: 12px;
+text-decoration: none;
+font-size: 18px;
+line-height: 25px;
+border-radius: 4px;
 }
 
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
 .header a.logo {
-    font-size: 25px;
-    font-weight: bold;
+font-size: 25px;
+font-weight: bold;
 }
 
+/* Change the background color on mouse-over */
 .header a:hover {
-    background-color: #ddd;
-    color: black;
+background-color: #ddd;
+color: black;
 }
 
+/* Style the active/current link*/
 .header a.active {
-    background-color: dodgerblue;
-    color: white;
+background-color: dodgerblue;
+color: white;
 }
 
+/* Float the link section to the right */
 .header-right {
-    float: right;
+float: right;
 }
 
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 @media screen and (max-width: 500px) {
 .header a {
     float: none;
     display: block;
     text-align: left;
 }
-
 .header-right {
     float: none;
 }
 }
-  
+
+/* body {
+margin: 60px auto;
+width: 70%;
+}
+
+title {
+font-size: 3em;
+font-family: 'Poppins', sans-serif;
+text-align: left;
+}
+
+.header {
+overflow: hidden;
+padding: 20px 10px;
+}
+
+.header a {
+float: left;
+color: black;
+text-align: center;
+padding: 12px;
+text-decoration: none;
+font-size: 18px; 
+line-height: 25px;
+border-radius: 4px;
+}
+
+.header a.logo {
+font-size: 25px;
+font-weight: bold;
+}
+
+.header a:hover {
+background-color: #ddd;
+color: black;
+}
+
+.header a.active {
+background-color: dodgerblue;
+color: white;
+}
+
+.header-right {
+float: right;
+}
+
+@media screen and (max-width: 500px) {
+.header a {
+float: none;
+display: block;
+text-align: left;
+}
+
+.header-right {
+float: none;
+}
+} */
+
 
 /* nav ul {
-    font-family: 'Roboto', sans-serif;
-    padding: 0px;
-    list-style: none;
-    text-align: right;
+font-family: 'Roboto', sans-serif;
+padding: 0px;
+list-style: none;
+text-align: right;
 }
 
 nav ul li {
-    display: inline;
-    margin-right: 20px;
-    text-align: right;
+display: inline;
+margin-right: 20px;
+text-align: right;
 }
 
 a {
-    font-size: 1.25em;
-    font-family: 'Roboto', sans-serif;
-    color: #000;
-    text-decoration: none;
+font-size: 1.25em;
+font-family: 'Roboto', sans-serif;
+color: #000;
+text-decoration: none;
 }
 
 nav ul li a.active {
-    text-decoration: underline;
+text-decoration: underline;
 }
 
 .static_link {
-    text-decoration: underline;
+text-decoration: underline;
 }
 
 .hover {
-    text-decoration: underline;
-}*/
+text-decoration: underline;
+}
 
 body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
+margin: 0;
+font-family: 'Roboto', sans-serif;
 }
 
 h1 {
-    font-size: 3em;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
+font-size: 3em;
+font-family: 'Poppins', sans-serif;
+text-align: center;
 }
 
 p {
-    font-size: 1.25em;
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.4em;
-    text-align: center;
+font-size: 1.25em;
+font-family: 'Roboto', sans-serif;
+line-height: 1.4em;
+text-align: center;
 }
 
 footer {
-    font-family: 'Roboto', sans-serif;
-    border-top: 0px;
-    font-size: .8em;
-    text-align: center;
-}
+font-family: 'Roboto', sans-serif;
+border-top: 0px;
+font-size: .8em;
+text-align: center;
+}*/
 
 /* Create two equal columns that floats next to each other */
-.column {
-    float: left;
-    width: 50%;
-    padding: 10px;
-}
+/* .column {
+float: left;
+width: 50%;
+padding: 10px;
+} */
 
 /* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
+/* .row:after {
+content: "";
+display: table;
+clear: both;
+} */
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 300px) {
-    .column {
-        width: 100%;
-    }
+/* @media screen and (max-width: 300px) {
+.column {
+    width: 100%;
 }
+} */
 
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
-}
+/* .center {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 75%;
+} */
