--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,10 @@
 body { 
 margin: 0;
-font-family: Arial, Helvetica, sans-serif;
+font-family: 'Roboto', sans-serif;
 }
 
 .header {
 overflow: hidden;
-background-color: #f1f1f1;
 padding: 20px 10px;
 }
 
@@ -26,13 +25,13 @@ font-weight: bold;
 }
 
 .header a:hover {
-background-color: #ddd;
+text-decoration: underline;
 color: black;
 }
 
 .header a.active {
-background-color: dodgerblue;
-color: white;
+text-decoration: underline;
+color: black;
 }
 
 .header-right {
@@ -49,6 +48,32 @@ float: right;
 .header-right {
     float: none;
 }
+}
+
+title {
+font-size: 3em;
+font-family: 'Poppins', sans-serif;
+text-align: left;
+}
+
+h1 {
+font-size: 3em;
+font-family: 'Poppins', sans-serif;
+text-align: center;
+}
+
+p {
+font-size: 1.25em;
+font-family: 'Roboto', sans-serif;
+line-height: 1.4em;
+text-align: center;
+}
+
+footer {
+font-family: 'Roboto', sans-serif;
+border-top: 0px;
+font-size: .8em;
+text-align: center;
 }
   
 
