--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
 		</head>
 		<body>
 			<div class="header">
-				<a href="#default" class="logo">CompanyLogo</a>
+				<a href="/" class="logo">Holly Jackson</a>
 				<div class="header-right">
-				  <a class="active" href="#home">Home</a>
-				  <a href="#contact">Contact</a>
-				  <a href="#about">About</a>
+				  <a class="active" href="/">Major Projects</a>
+				  <a href="/minor-projects">Minor Projects</a>
+				  <a href="/about">About</a>
 				</div>
 			</div>
 			<div class="container">
