--- a/css/main.css
+++ b/css/main.css
@@ -1,81 +1,83 @@
-body { 
-margin: 0;
-font-family: 'Roboto', sans-serif;
+* {box-sizing: border-box;}
+
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .header {
-overflow: hidden;
-padding: 20px 10px;
+    overflow: hidden;
+    padding: 20px 10px;
 }
 
 .header a {
-float: left;
-color: black;
-text-align: center;
-padding: 12px;
-text-decoration: none;
-font-size: 18px; 
-line-height: 25px;
-border-radius: 4px;
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px; 
+    line-height: 25px;
+    border-radius: 4px;
 }
 
 .header a.logo {
-font-size: 25px;
-font-weight: bold;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .header a:hover {
-text-decoration: underline;
-color: black;
+    text-decoration: underline;
+    color: black;
 }
 
 .header a.active {
-text-decoration: underline;
-color: black;
+    text-decoration: underline;
+    color: black;
 }
 
 .header-right {
-float: right;
+    float: right;
 }
 
 @media screen and (max-width: 500px) {
-.header a {
-    float: none;
-    display: block;
-    text-align: left;
-}
-
-.header-right {
-    float: none;
-}
+    .header a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    .header-right {
+        float: none;
+    }
 }
 
 title {
-font-size: 3em;
-font-family: 'Poppins', sans-serif;
-text-align: left;
+    font-size: 3em;
+    font-family: 'Poppins', sans-serif;
+    text-align: left;
 }
 
 h1 {
-font-size: 3em;
-font-family: 'Poppins', sans-serif;
-text-align: center;
+    font-size: 3em;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
 }
 
 p {
-font-size: 1.25em;
-font-family: 'Roboto', sans-serif;
-line-height: 1.4em;
-text-align: center;
+    font-size: 1.25em;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.4em;
+    text-align: center;
 }
 
 footer {
-font-family: 'Roboto', sans-serif;
-border-top: 0px;
-font-size: .8em;
-text-align: center;
+    font-family: 'Roboto', sans-serif;
+    border-top: 0px;
+    font-size: .8em;
+    text-align: center;
 }
-  
 
 /* body {
 margin: 60px auto;
