--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,11 @@ body {
     font-weight: bold;
 }
 
+.header a.logo:hover {
+    text-decoration: none;
+    color: black;
+}
+
 .header a:hover {
     text-decoration: underline;
     color: black;
