--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: "Holly Jackson"
 ---
 
-<div class="blurb">
-  <h1>{{ page.title }}</h1>
-  <p>{{ content }}</p>
+<h1>{{ page.title }}</h1>
+<div class="container">
+  {{ content }}
 </div>
