--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .header {
@@ -48,6 +48,10 @@ body {
 }
 
 @media screen and (max-width: 500px) {
+    body {    
+        margin-left: 5px;
+        margin-right: 5px;
+    }
     .header a {
         float: none;
         display: block;
