reformatting pages, attempt at column layout

--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,34 @@ footer {
     text-align: center;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 300px) {
+    .column {
+        width: 100%;
+    }
+}
+
 /* body {
 margin: 60px auto;
 width: 70%;
