--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,10 @@ body {
     }
 }
 
+a {
+    color: black;
+}
+
 title {
     font-size: 3em;
     font-family: 'Poppins', sans-serif;
@@ -88,15 +92,17 @@ footer {
     text-align: center;
 }
 
-.center {
+img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 75%;
+    height: auto;
 }
 
 /* Create two equal columns that floats next to each other */
 .column {
+    text-align: left;
     float: left;
     width: 50%;
     padding: 10px;
