--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,19 +12,21 @@
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<div class="header">
-			<a href="/" class="logo">Holly Jackson</a>
-			<div class="header-right">
-				<a class="active" href="/">Major Projects</a>
-				<a href="/minor-projects">Minor Projects</a>
-				<a href="/about">About</a>
+		<div class="main">
+			<div class="header">
+				<a href="/" class="logo">Holly Jackson</a>
+				<div class="header-right">
+					<a class="active" href="/">Major Projects</a>
+					<a href="/minor-projects">Minor Projects</a>
+					<a href="/about">About</a>
+				</div>
 			</div>
+			<div class="container">
+				{{ content }}
+			</div>
+			<footer>
+				<a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
+			</footer>
 		</div>
-		<div class="container">
-			{{ content }}
-		</div>
-		<footer>
-			<a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
-		</footer>
 	</body>
 </html>
