--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 * {box-sizing: border-box;}
 
+.main {
+    max-width: 1000px;
+}  
+
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
@@ -78,6 +82,14 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    font-weight: bold;
+    font-size: 1.25em;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.4em;
+    text-align: left;
+}
+
 p {
     font-size: 1.25em;
     font-family: 'Roboto', sans-serif;
@@ -122,146 +134,91 @@ img {
     }
 }
 
-/* body {
-margin: 60px auto;
-width: 70%;
+.row_grid {
+    margin: 8px -16px;
 }
 
-title {
-font-size: 3em;
-font-family: 'Poppins', sans-serif;
-text-align: left;
+/* Add padding BETWEEN each column */
+.row_grid,
+.row_grid > .column_grid {
+    padding: 8px;
 }
-
-.header {
-overflow: hidden;
-padding: 20px 10px;
-}
-
-.header a {
-float: left;
-color: black;
-text-align: center;
-padding: 12px;
-text-decoration: none;
-font-size: 18px; 
-line-height: 25px;
-border-radius: 4px;
-}
-
-.header a.logo {
-font-size: 25px;
-font-weight: bold;
-}
-
-.header a:hover {
-background-color: #ddd;
-color: black;
-}
-
-.header a.active {
-background-color: dodgerblue;
-color: white;
-}
-
-.header-right {
-float: right;
-}
-
-@media screen and (max-width: 500px) {
-.header a {
-float: none;
-display: block;
-text-align: left;
-}
-
-.header-right {
-float: none;
-}
-} */
-
-
-/* nav ul {
-font-family: 'Roboto', sans-serif;
-padding: 0px;
-list-style: none;
-text-align: right;
-}
-
-nav ul li {
-display: inline;
-margin-right: 20px;
-text-align: right;
-}
-
-a {
-font-size: 1.25em;
-font-family: 'Roboto', sans-serif;
-color: #000;
-text-decoration: none;
-}
-
-nav ul li a.active {
-text-decoration: underline;
-}
-
-.static_link {
-text-decoration: underline;
-}
-
-.hover {
-text-decoration: underline;
-}
-
-body {
-margin: 0;
-font-family: 'Roboto', sans-serif;
-}
-
-h1 {
-font-size: 3em;
-font-family: 'Poppins', sans-serif;
-text-align: center;
-}
-
-p {
-font-size: 1.25em;
-font-family: 'Roboto', sans-serif;
-line-height: 1.4em;
-text-align: center;
-}
-
-footer {
-font-family: 'Roboto', sans-serif;
-border-top: 0px;
-font-size: .8em;
-text-align: center;
-}*/
 
 /* Create two equal columns that floats next to each other */
-/* .column {
-float: left;
-width: 50%;
-padding: 10px;
-} */
+.column_grid {
+    float: left;
+    width: 50%;
+}
 
-/* Clear floats after the columns */
-/* .row:after {
-content: "";
-display: table;
-clear: both;
-} */
+/* Clear floats after rows */ 
+.row_grid:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Content */
+.content {
+    position: relative;
+    padding: 10px;
+}
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-/* @media screen and (max-width: 300px) {
-.column {
-    width: 100%;
+@media screen and (max-width: 600px) {
+    .column_grid {
+        width: 100%;
+    }
 }
-} */
 
-/* .center {
-display: block;
-margin-left: auto;
-margin-right: auto;
-width: 75%;
-} */
+.image {
+    opacity: 0.9;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.content:hover .image {
+    opacity: 1;
+}
+
+.content:hover .middle {
+    opacity: 0;
+}
+
+.text {
+    font-weight: bold;
+    font-size: 1.25em;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    padding: 16px 32px;
+}
+
+.img-hover-zoom {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    backface-visibility: hidden;
+    overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+}
+
+/* [2] Transition property for smooth transformation of images */
+.img-hover-zoom img {
+    transition: transform .5s ease;
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.img-hover-zoom:hover img {
+    transform: scale(1.25);
+}
