--- a/_layouts/portfolio2.html
+++ b/_layouts/portfolio2.html
@@ -7,33 +7,33 @@ layout: page
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <img src="img_avatar.png" alt="This zooms-in really well and smooth" style="width:100%">
+                <img src="/images/bezier_curve.png" alt="Implicit Curves" style="width:100%">
             </div>
-            <h2>Caption</h2>
+            <h2>Implicit Curves</h2>
         </div>
     </div>
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <img src="img_avatar.png" alt="This zooms-in really well and smooth" style="width:100%">
+                <img src="/images/las_campanas.jpg" alt="Cosmic Phylogeny" style="width:100%">
             </div>
-            <h2>Caption</h2>
+            <h2>Cosmic Phylogeny</h2>
         </div>
     </div>
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <img src="img_avatar.png" alt="This zooms-in really well and smooth" style="width:100%">
+                <img src="/images/brienne_letter.JPG" alt="Unlocking History" style="width:100%">
             </div>
-            <h2>Caption</h2>
+            <h2>Unlocking History</h2>
         </div>
     </div>
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <img src="img_avatar.png" alt="This zooms-in really well and smooth" style="width:100%">
+                <img src="/images/sla_bridge.JPG" alt="Topological Optimization" style="width:100%">
             </div>
-            <h2>Caption</h2>
+            <h2>Topological Optimization</h2>
         </div>
     </div>
     <!-- END GRID -->
