added image links

--- a/_layouts/portfolio1.html
+++ b/_layouts/portfolio1.html
@@ -6,7 +6,9 @@ layout: page
 <div class="row_grid">
     <div class="column_grid">
         <div class="content">
-        <img src="/images/bezier_curve.png" alt="Implicit Curves" class="image" style="width:100%">
+        <a href="/major-projects/implicit-curves.html">
+            <img src="/images/bezier_curve.png" alt="Implicit Curves" class="image" style="width:100%">
+        </a>
         <div class="middle">
             <div class="text">Implicit Curves</div>
         </div>
@@ -14,7 +16,9 @@ layout: page
     </div>
     <div class="column_grid">
         <div class="content">
-        <img src="/images/las_campanas.jpg" alt="Cosmic Phylogeny" class="image" style="width:100%">
+        <a href="/major-projects/cosmic-phylogeny.html">
+            <img src="/images/las_campanas.jpg" alt="Cosmic Phylogeny" class="image" style="width:100%">
+        </a>
         <div class="middle">
             <div class="text">Cosmic Phylogeny</div>
         </div>
@@ -22,7 +26,9 @@ layout: page
     </div>
     <div class="column_grid">
         <div class="content">
-        <img src="/images/brienne_letter.JPG" alt="Unlocking History" class="image" style="width:100%">
+        <a href="/major-projects/unlocking-history.html">
+            <img src="/images/brienne_letter.JPG" alt="Unlocking History" class="image" style="width:100%">
+        </a>
         <div class="middle">
             <div class="text">Unlocking History</div>
         </div>
@@ -30,7 +36,9 @@ layout: page
     </div>
     <div class="column_grid">
         <div class="content">
-        <img src="/images/sla_bridge.JPG" alt="Topological Optimization" class="image" style="width:100%">
+        <a href="/major-projects/topological-optimization.html">
+            <img src="/images/sla_bridge.JPG" alt="Topological Optimization" class="image" style="width:100%">
+        </a>
         <div class="middle">
             <div class="text">Topological Optimization</div>
         </div>
