--- a/_layouts/portfolio2.html
+++ b/_layouts/portfolio2.html
@@ -7,7 +7,9 @@ layout: page
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <img src="/images/bezier_curve.png" alt="Implicit Curves" style="width:100%">
+                <a href="/major-projects/implicit-curves.html">
+                    <img src="/images/bezier_curve.png" alt="Implicit Curves" style="width:100%">
+                </a>
             </div>
             <h2>Implicit Curves</h2>
         </div>
@@ -15,7 +17,9 @@ layout: page
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <img src="/images/las_campanas.jpg" alt="Cosmic Phylogeny" style="width:100%">
+                <a href="/major-projects/cosmic-phylogeny.html">
+                    <img src="/images/las_campanas.jpg" alt="Cosmic Phylogeny" style="width:100%">
+                </a>
             </div>
             <h2>Cosmic Phylogeny</h2>
         </div>
@@ -23,7 +27,9 @@ layout: page
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <img src="/images/brienne_letter.JPG" alt="Unlocking History" style="width:100%">
+                <a href="/major-projects/unlocking-history.html">
+                    <img src="/images/brienne_letter.JPG" alt="Unlocking History" style="width:100%">
+                </a>
             </div>
             <h2>Unlocking History</h2>
         </div>
@@ -31,7 +37,9 @@ layout: page
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <img src="/images/sla_bridge.JPG" alt="Topological Optimization" style="width:100%">
+                <a href="/major-projects/topological-optimization.html">
+                    <img src="/images/sla_bridge.JPG" alt="Topological Optimization" style="width:100%">
+                </a>
             </div>
             <h2>Topological Optimization</h2>
         </div>
