--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    margin-top: 40px;
     margin-left: 40px;
     margin-right: 40px;
 }
