--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,10 @@
 			<div class="header">
 				<a href="/" class="logo">Holly Jackson</a>
 				<div class="header-right">
-					<a class="active" href="/">Major Projects</a>
+					{{ page.menu }}
+					<!--<a class="active" href="/">Major Projects</a>
 					<a href="/minor-projects">Minor Projects</a>
-					<a href="/about">About</a>
+					<a href="/about">About</a>-->
 				</div>
 			</div>
 			<div class="container">
