--- a/css/main.css
+++ b/css/main.css
@@ -110,8 +110,20 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 50%;
     height: auto;
+}
+
+@media screen and (max-width: 700px) {
+    .img {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .img {
+        width: 100%;
+    }
 }
 
 /* Create two equal columns that floats next to each other */
