--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,14 @@ h2 {
     text-align: left;
 }
 
+h3 {
+    font-weight: bold;
+    font-size: 3em;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.4em;
+    text-align: left;
+}
+
 p {
     font-size: 1.25em;
     font-family: 'Roboto', sans-serif;
