--- a/css/main.css
+++ b/css/main.css
@@ -335,5 +335,5 @@ img {
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-    .prev, .next,.text {font-size: 0.75em}
+    .prev, .next,.caption_text {font-size: 0.75em}
 }
