--- a/css/main.css
+++ b/css/main.css
@@ -300,7 +300,7 @@ img {
 }
 
 /* The dots/bullets/indicators */
-.dot {
+/* .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -313,7 +313,7 @@ img {
 
 .active, .dot:hover {
     background-color: #717171;
-}
+} */
 
 /* Fading animation */
 .fade {
