--- a/css/main.css
+++ b/css/main.css
@@ -316,11 +316,15 @@ img {
     .prev, .next,.caption_text {font-size: 0.75em}
 }
 
-iframe {
-    width: 75%;
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
 }
-@media screen and (max-width: 600px) {
-    .iframe {
-        width: 100%;
-    }
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
