--- a/css/main.css
+++ b/css/main.css
@@ -330,14 +330,17 @@ img {
 }
 
 .tooltip {
+    font-size: 1.25em;
+    font-family: 'Roboto', sans-serif;
     position: relative;
-    display: inline-block;
     border-bottom: 1px dotted black;
 }
 
 .tooltip .tooltiptext {
+    font-size: 1em;
+    font-family: 'Roboto', sans-serif;
     visibility: hidden;
-    width: 120px;
+    width: 200px;
     background-color: black;
     color: #fff;
     text-align: center;
@@ -347,14 +350,14 @@ img {
     z-index: 1;
     bottom: -870%;
     left: 50%;
-    margin-left: -60px;
+    margin-left: -100px;
 
     /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
     opacity: 0;
     transition: opacity 1s;
 }
 
-    .tooltip:hover .tooltiptext {
+.tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
 }
