--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,6 @@ img {
 }
 
 .row_grid {
-    grid-template-columns: 25% auto;
     margin: 8px -16px;
 }
 
@@ -170,29 +169,17 @@ img {
     padding: 8px;
 }
 
-.row_grid,
-.row_grid > .column_grid_title {
-    padding: 8px;
-}
-
-.row_grid,
-.row_grid > .column_grid_text {
-    padding: 8px;
-}
-
 /* Create two equal columns that floats next to each other */
 .column_grid {
     float: left;
-    width: 50%;
+    /*width: 50%;*/
 }
 
-.column_grid_title {
-    float: left;
+.left {
     width: 25%;
 }
 
-.column_grid_text {
-    float: left;
+.right {
     width: 75%;
 }
 
@@ -212,12 +199,6 @@ img {
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
     .column_grid {
-        width: 100%;
-    }
-    .column_grid_title {
-        width: 100%;
-    }
-    .column_grid_text {
         width: 100%;
     }
 }
