--- a/css/main.css
+++ b/css/main.css
@@ -199,8 +199,14 @@ img {
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 775px) {
     .column_grid {
+        width: 100%;
+    }
+    .left {
+        width: 100%;
+    }
+    .right {
         width: 100%;
     }
 }
