changed footer settings, added social links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 			</div>
 			<br><br><br><br><br>
 			<footer>
-				<a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
+				{{ page.footer }}
 			</footer>
 			<br><br><br><br><br>
 		</div>
