--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 70%;
     height: auto;
 }
 
@@ -125,11 +125,20 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 70%;
+}
+
+@media screen and (max-width: 750px) {
+    img {
+        width: 80%;
+    }
+    .about_container {
+        width: 80%;
+    }
 }
 
 @media screen and (max-width: 600px) {
-    .img {
+    img {
         width: 100%;
     }
     .about_container {
