--- a/css/main.css
+++ b/css/main.css
@@ -146,26 +146,17 @@ img {
     }
 }
 
-/* Create two equal columns that floats next to each other */
-.column {
-    text-align: left;
+.column_icon {
     float: left;
     width: 50%;
-    padding: 10px;
+    padding: 5px;
 }
 
-/* Clear floats after the columns */
-.row:after {
+/* Clearfix (clear floats) */
+.row_icon::after {
     content: "";
-    display: table;
     clear: both;
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 300px) {
-    .column {
-        width: 100%;
-    }
+    display: table;
 }
 
 .row_grid {
