--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,12 @@ footer {
     text-align: center;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .resizeable {
     display: block;
     margin-left: auto;
